adds prettier and tslint

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@types/expo": "^32.0.0",
     "@types/react-native": "^0.57.0",
     "babel-preset-expo": "^5.0.0",
+    "prettier": "^1.17.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.3.0"
   },
   "private": true
