--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "@types/react-native-vector-icons": "^6.4.1",
+    "@types/react-navigation-material-bottom-tabs": "^0.3.1",
+    "expo": "^35.0.0",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "^2.15.2",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
@@ -19,8 +22,6 @@
     "@types/expo": "^32.0.0",
     "@types/react": "^16.8.22",
     "@types/react-native": "^0.57.63",
-    "@types/react-native-vector-icons": "^6.4.1",
-    "@types/react-navigation-material-bottom-tabs": "^0.3.1",
     "babel-preset-expo": "^5.0.0",
     "prettier": "^1.17.0",
     "react-native-typescript-transformer": "^1.2.12",
